@@ -1,14 +1,20 @@
 // SPDX-License-Identifier: GPL-3.0-or-later
 #include "desktop/dialogs/resizedialog.h"
+#include "desktop/utils/widgetutils.h"
 #include "libclient/utils/images.h"
 #include "ui_resizedialog.h"
+#include <QAction>
 #include <QMessageBox>
 #include <QPushButton>
 #include <QSignalBlocker>
+#include <tuple>
 
 namespace dialogs {
 
-ResizeDialog::ResizeDialog(const QSize &oldsize, QWidget *parent)
+ResizeDialog::ResizeDialog(
+	const QSize &oldsize, const QAction *expandUpAction,
+	const QAction *expandLeftAction, const QAction *expandRightAction,
+	const QAction *expandDownAction, QWidget *parent)
 	: QDialog(parent)
 	, m_oldsize(oldsize)
 {
@@ -17,6 +23,22 @@ ResizeDialog::ResizeDialog(const QSize &oldsize, QWidget *parent)
 
 	m_ui->resizer->setOriginalSize(oldsize);
 	m_ui->resizer->setTargetSize(oldsize);
+
+	std::tuple<QToolButton *, const QAction *, QString> buttonActions[] = {
+		{m_ui->expandUp, expandUpAction, tr("Expand up")},
+		{m_ui->expandLeft, expandLeftAction, tr("Expand left")},
+		{m_ui->expandRight, expandRightAction, tr("Expand right")},
+		{m_ui->expandDown, expandDownAction, tr("Expand down")},
+	};
+	for(const auto &[button, action, text] : buttonActions) {
+		m_ui->grid->setAlignment(button, Qt::AlignCenter);
+		QAction *buttonAction = new QAction(action->icon(), text, this);
+		buttonAction->setToolTip(
+			utils::makeActionShortcutText(action->text(), action->shortcut()));
+		buttonAction->setShortcuts(action->shortcuts());
+		buttonAction->setAutoRepeat(true);
+		button->setDefaultAction(buttonAction);
+	}
 
 	m_ui->buttons->button(QDialogButtonBox::Ok)->setText(tr("Resize"));
 
@@ -35,7 +57,18 @@ ResizeDialog::ResizeDialog(const QSize &oldsize, QWidget *parent)
 	connect(
 		m_ui->keepaspect, &QCheckBox::toggled, this,
 		&ResizeDialog::toggleAspectRatio);
-
+	connect(
+		m_ui->expandUp->defaultAction(), &QAction::triggered, this,
+		&ResizeDialog::expandUp);
+	connect(
+		m_ui->expandLeft->defaultAction(), &QAction::triggered, this,
+		&ResizeDialog::expandLeft);
+	connect(
+		m_ui->expandRight->defaultAction(), &QAction::triggered, this,
+		&ResizeDialog::expandRight);
+	connect(
+		m_ui->expandDown->defaultAction(), &QAction::triggered, this,
+		&ResizeDialog::expandDown);
 	connect(
 		centerButton, &QPushButton::clicked, m_ui->resizer,
 		&widgets::ResizerWidget::center);
@@ -68,6 +101,32 @@ void ResizeDialog::setBounds(const QRect &rect)
 
 	m_ui->resizer->setOffset(-rectIn.topLeft());
 	m_ui->resizer->setTargetSize(rectIn.size());
+}
+
+void ResizeDialog::initialExpand(int expandDirection)
+{
+	QToolButton *button;
+	switch(expandDirection) {
+	case int(ExpandDirection::Up):
+		button = m_ui->expandUp;
+		break;
+	case int(ExpandDirection::Left):
+		button = m_ui->expandLeft;
+		break;
+	case int(ExpandDirection::Right):
+		button = m_ui->expandRight;
+		break;
+	case int(ExpandDirection::Down):
+		button = m_ui->expandDown;
+		break;
+	default:
+		button = nullptr;
+		break;
+	}
+	if(button) {
+		button->click();
+		m_ui->buttons->button(QDialogButtonBox::Ok)->setFocus();
+	}
 }
 
 void ResizeDialog::done(int r)
@@ -111,6 +170,28 @@ void ResizeDialog::toggleAspectRatio(bool keep)
 	} else {
 		m_aspectratio = 0;
 	}
+}
+
+void ResizeDialog::expandUp()
+{
+	m_ui->height->setValue(m_ui->height->value() + EXPAND);
+	m_ui->resizer->changeOffsetBy(QPoint(0, EXPAND));
+}
+
+void ResizeDialog::expandLeft()
+{
+	m_ui->width->setValue(m_ui->width->value() + EXPAND);
+	m_ui->resizer->changeOffsetBy(QPoint(EXPAND, 0));
+}
+
+void ResizeDialog::expandRight()
+{
+	m_ui->width->setValue(m_ui->width->value() + EXPAND);
+}
+
+void ResizeDialog::expandDown()
+{
+	m_ui->height->setValue(m_ui->height->value() + EXPAND);
 }
 
 void ResizeDialog::reset()
